# qr-reader

./: LICENSE  README.md  pyproject.toml
src/qr_reader/: dev.py
